--- a/docker-images-react/public/index.html
+++ b/docker-images-react/public/index.html
@@ -37,7 +37,9 @@
               <img src="/img/logo-small.png" />
             </div>
           </a>
-          <a href="/" class="simple-text logo-normal"> </a>
+          <a href="/" class="simple-text logo-normal">
+            ゲストユーザー
+          </a>
         </div>
         <div class="sidebar-wrapper">
           <ul class="nav">
